--- a/src/App.css
+++ b/src/App.css
@@ -28,6 +28,14 @@
   color: #61dafb;
 }
 
+.state {
+  max-width: 600px;
+  border: 1px solid #ddd;
+  padding: 15px;
+  margin: 30px auto;
+
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
